bug_fixed/text overflow fixed

--- a/Front-End/src/app/blog-carousel/blog-carousel.component.css
+++ b/Front-End/src/app/blog-carousel/blog-carousel.component.css
@@ -37,6 +37,13 @@
   overflow: hidden;
   word-wrap: break-word;
 }
+.carousel-container p{
+  display: -webkit-box;
+  -webkit-line-clamp: 10;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  font-size: large;
+}
 
 span.post-active p {
   margin-top: 5%;
